--- a/source/n1.html
+++ b/source/n1.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en-UK">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <h1>Yooooooo</h1>
+        <h2>How's it going</h2>
+    </body>
 </html>
