--- a/source/n1.html
+++ b/source/n1.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-UK">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
+        <title>n1</title>
     </head>
     <body>
-        <h1>Yooooooo</h1>
-        <h2>How's it going</h2>
+        <h1><b>Yooooooo</b></h1>        <!--- Doing without div --->
+        <p>How's it going 
+            &#x1F596;
+        </p>
+        <img style="height: 10%; width: 10%; top: 0%; position: relative;" src="https://upload.wikimedia.org/wikipedia/commons/5/58/France_road_sign_B14_%2845%29.svg" alt="45">
     </body>
 </html>
