--- a/source/n1.html
+++ b/source/n1.html
@@ -11,6 +11,6 @@
         <p>How's it going 
             &#x1F596;
         </p>
-        <img style="height: 10%; width: 10%; top: 0%; position: relative;" src="https://upload.wikimedia.org/wikipedia/commons/5/58/France_road_sign_B14_%2845%29.svg" alt="45">
+        <img style="height: 20%; width: 15%; top: 0%; left: 150px; position: absolute;" src="45.png" alt="45"> <!--Source: https://commons.wikimedia.org/wiki/File:Route_45-FIN.png -->
     </body>
 </html>
