--- a/source/n1.html
+++ b/source/n1.html
@@ -5,12 +5,13 @@
         <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
         <title>n1</title>
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <h1><b>Yooooooo</b></h1>        <!--- Doing without div --->
         <p>How's it going 
             &lt;&#x1F596;&gt;
         </p>
-        <img style="height: 20%; width: 15%; top: 0%; left: 150px; position: absolute;" src="45.png" alt="45"> <!--Source: https://commons.wikimedia.org/wiki/File:Route_45-FIN.png -->
+        <img style="height: 20%; width: 15%; top: 0%; left: 150px; position: absolute;" src="images/45.png" alt="45"> <!--Source: https://commons.wikimedia.org/wiki/File:Route_45-FIN.png -->
     </body>
 </html>
