--- a/source/n1.html
+++ b/source/n1.html
@@ -8,10 +8,24 @@
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     </head>
     <body>
-        <h1><b>Yooooooo</b></h1>        <!--- Doing without div --->
+        <h1><b>Yooooooo</b></h1>        <!--- non semantic ---> <!--- for italic: i --->
+        <h1><strong>Yooooooo</strong></h1>        <!--- semantic ---> <!--- for italic: em --->
         <p>How's it going 
             &lt;&#x1F596;&gt;
         </p>
         <img style="height: 20%; width: 15%; top: 0%; left: 150px; position: absolute;" src="images/45.png" alt="45"> <!--Source: https://commons.wikimedia.org/wiki/File:Route_45-FIN.png -->
+        <h2>List</h2>
+        <ol type="I">
+            <li>Create List.</li>
+            <li>Fill it</li>
+            <li>With stuff.</li>
+            <li>Finish it.</li>
+        </ol>
+        <ul>
+            <li>Create List.</li>
+            <li>Fill it</li>
+            <li>With stuff.</li>
+            <li>Finish it.</li>
+        </ul>
     </body>
 </html>
