--- a/source/n1.html
+++ b/source/n1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  <!--This file was created for the purpose of remembering some tags and other commands-->
 <html lang="en-UK">
     <head>
         <meta charset="UTF-8">
@@ -15,9 +15,13 @@
         </p>
         <img style="height: 20%; width: 15%; top: 0%; left: 150px; position: absolute;" src="images/45.png" alt="45"> <!--Source: https://commons.wikimedia.org/wiki/File:Route_45-FIN.png -->
         <h2>List</h2>
-        <ol type="I">
+        <ol type="I" start="2">
             <li>Create List.</li>
             <li>Fill it</li>
+                <ul type="square">
+                    <li>in</li>
+                    <li>between</li>
+                </ul>
             <li>With stuff.</li>
             <li>Finish it.</li>
         </ol>
@@ -27,5 +31,14 @@
             <li>With stuff.</li>
             <li>Finish it.</li>
         </ul>
+        <h2>Lists with definition</h2>
+        <dl>
+            <dt>Life</dt>
+            <dd>Will Change.</dd>
+            <dt>I am</dt>
+            <dd>The storm that is approaching.</dd>
+            <dt>Standing here</dt>
+            <dd>I realize that you're just like me trying to make history.</dd>
+        </dl>
     </body>
 </html>
