--- a/source/n1.html
+++ b/source/n1.html
@@ -12,6 +12,8 @@
         <h1><strong>Yooooooo</strong></h1>        <!--- semantic ---> <!--- for italic: em --->
         <p>How's it going 
             &lt;&#x1F596;&gt;
+            <br>
+            <a href="https://github.com/Sergio-Sousa-Sermio21" target="_blank" rel="external">My github.</a>
         </p>
         <img style="height: 20%; width: 15%; top: 0%; left: 150px; position: absolute;" src="images/45.png" alt="45"> <!--Source: https://commons.wikimedia.org/wiki/File:Route_45-FIN.png -->
         <h2>List</h2>
