Adding internal links

--- a/source/n1.html
+++ b/source/n1.html
@@ -42,5 +42,6 @@
             <dt>Standing here</dt>
             <dd>I realize that you're just like me trying to make history.</dd>
         </dl>
+        <p><a href="n1_2.html" target="_self" rel="next">Second page</a></p>
     </body>
 </html>
