Adding nofollow and dofollow
Concepts for SEO.
Fixed a rel on the 2º page to "prev".

--- a/source/n1_2.html
+++ b/source/n1_2.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Second Page for internal links purposes</h1>
-    <p><a href="n1.html" target="_self" rel="next">Link for the first page</a></p>
+    <p>Brought to you by <a href="https://github.com/Sergio-Sousa-Sermio21" target="_blank" rel="dofollow">me.</a>
+    <p>Check out <a href="https://www.google.pt/?hl=pt-PT" target="_blank" rel="nofollow">Google.</a>
+    <p><a href="n1.html" target="_self" rel="prev">Link for the first page</a></p>
 </body>
 </html>
