--- a/source/n1.html
+++ b/source/n1.html
@@ -13,7 +13,7 @@
         <p>How's it going 
             &lt;&#x1F596;&gt;
             <br>
-            <a href="https://github.com/Sergio-Sousa-Sermio21" target="_blank" rel="external">My github.</a>
+            <abbr title="Sergio-Sousa-Sermio21"><a href="https://github.com/Sergio-Sousa-Sermio21" target="_blank" rel="external">My github.</a></abbr>
         </p>
         <img style="height: 20%; width: 15%; top: 0%; left: 150px; position: absolute;" src="images/45.png" alt="45"> <!--Source: https://commons.wikimedia.org/wiki/File:Route_45-FIN.png -->
         <h2>List</h2>
