--- a/source/n2.html
+++ b/source/n2.html
@@ -24,6 +24,24 @@
         <abbr title="&lt;code&gt;">
             <li>Write in code</li>
         </abbr>
+        <abbr title="&lt;ol&gt;">
+            <li>Ordered lists</li>
+        </abbr>
+        <abbr title="&lt;ul&gt;">
+            <li>Unordered lists</li>
+        </abbr>
+        <abbr title="&lt;dl&gt;">
+            <li>Lists with descriptions</li>
+        </abbr>
+        <abbr title="&lt;dt&gt;">
+            <li>Lists with descriptions(title)</li>
+        </abbr>
+        <abbr title="&lt;dd&gt;">
+            <li>Lists with descriptions(description)</li>
+        </abbr>
+        <abbr title="&lt;abbr&gt;">
+            <li>Descriptions(the focus of this document)</li>
+        </abbr>
     </ul>
 </body>
 </html>
