Adding a download link in n1_2
Zipped the c file file since I couln't find another way to download the c file directly.

--- a/source/n1_2.html
+++ b/source/n1_2.html
@@ -10,6 +10,7 @@
     <h1>Second Page for internal links purposes</h1>
     <p>Brought to you by <a href="https://github.com/Sergio-Sousa-Sermio21" target="_blank" rel="dofollow">me.</a>
     <p>Check out <a href="https://www.google.pt/?hl=pt-PT" target="_blank" rel="nofollow">Google.</a>
+    <p>Hey download <a href="download/d1.zip" download="d1.c" target="_blank" type="application/zip">this c file(zipped)</a>!</p>
     <p><a href="n1.html" target="_self" rel="prev">Link for the first page</a></p>
 </body>
 </html>
