--- a/source/n2.html
+++ b/source/n2.html
@@ -8,7 +8,8 @@
     <title>n2</title>
 </head>
 <body>
-    <h1>HTML TAGS</h1><br>
+    <h1>HTML TAGS</h1>
+    <img src="images/html_image_sized.png" alt="HTML image">
     <p>There will be a list down below wich will have some <strong>html functionalities.</strong></p>
     <p>Their respective tags will appear if you put your cursor on one.</p>
     <ul>
