Adding a video to n4

--- a/source/n4.html
+++ b/source/n4.html
@@ -8,6 +8,10 @@
     <title>n4</title>
 </head>
 <body>
-    
+    <video width="500" controls>
+        <source src="media/cafe.mp4" type="video/mp4">
+        <source src="media/cafe2.webm" type="video/webm">
+        <p>Couldn't the video</p>
+    </video>
 </body>
 </html>
