Added a streamed video to n4

--- a/source/n4.html
+++ b/source/n4.html
@@ -8,10 +8,13 @@
     <title>n4</title>
 </head>
 <body>
-    <video width="500" controls>
+    <h1>In the server (will use more bandwith)</p>
+    <video width="560" poster="images/html_image_sized.png" controls>
         <source src="media/cafe.mp4" type="video/mp4">
         <source src="media/cafe2.webm" type="video/webm">
         <p>Couldn't the video</p>
     </video>
+    <p>Streaming</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/c7BVtGnlxT8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
