--- a/source/n6.html
+++ b/source/n6.html
@@ -5,11 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <title>Inline CSS</title>
+    <title>style CSS</title>
+    <style>
+        body {
+            background-color: bisque;
+            font-size: large;
+        }
+        h1 {
+            color: blue;
+        }
+        h2 {
+            color: brown;
+        }
+        p {
+            color:aqua;
+        }
+    </style>
 </head>
-<body style="background-color: aqua;">
-    <h1 style="color: red; font-family: 'Courier New', Courier, monospace;">F</h1>
-    <h2 style="color:white; font-size: medium;">f 1</h2>
-    <p style="font-size: small; text-align:center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum repellendus, reprehenderit officiis nihil praesentium voluptate velit. Quibusdam officia ea tenetur excepturi molestiae nobis eos, cupiditate incidunt, aspernatur dolor, ipsam suscipit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fugiat similique impedit veritatis odio id, magnam deserunt recusandae, laboriosam quia ullam repellendus asperiores alias voluptatem atque a in. Delectus, labore!</p>
+<body>
+    <h1>F</h1>
+    <h2>f 1</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum repellendus, reprehenderit officiis nihil praesentium voluptate velit. Quibusdam officia ea tenetur excepturi molestiae nobis eos, cupiditate incidunt, aspernatur dolor, ipsam suscipit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fugiat similique impedit veritatis odio id, magnam deserunt recusandae, laboriosam quia ullam repellendus asperiores alias voluptatem atque a in. Delectus, labore!</p>
+
 </body>
 </html>
