--- a/source/n8.html
+++ b/source/n8.html
@@ -9,13 +9,15 @@
     <title>n8</title>
 </head>
 <body>
-    <h1>Site Example</h1>
-    <h2>Title 1</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur illum, magni, dignissimos ab vel temporibus eos laboriosam eum quos ratione quam deserunt incidunt in officiis ad consequatur aliquid dicta natus.</p>
-    <h2>Title 2</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur illum, magni, dignissimos ab vel temporibus eos laboriosam eum quos ratione quam deserunt incidunt in officiis ad consequatur aliquid dicta natus.</p>
-    <h2>Title 3</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur illum, magni, dignissimos ab vel temporibus eos laboriosam eum quos ratione quam deserunt incidunt in officiis ad consequatur aliquid dicta natus.</p>
+    <main>
+        <h1>Site Example</h1>
+        <h2>Title 1</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur illum, magni, dignissimos ab vel temporibus eos laboriosam eum quos ratione quam deserunt incidunt in officiis ad consequatur aliquid dicta natus.</p>
+        <h2>Title 2</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur illum, magni, dignissimos ab vel temporibus eos laboriosam eum quos ratione quam deserunt incidunt in officiis ad consequatur aliquid dicta natus.</p>
+        <h2>Title 3</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur illum, magni, dignissimos ab vel temporibus eos laboriosam eum quos ratione quam deserunt incidunt in officiis ad consequatur aliquid dicta natus.</p>
+    </main>
 
 </body>
 </html>
