--- a/source/n9.html
+++ b/source/n9.html
@@ -21,9 +21,11 @@
         }
         h1 {
             font-family: 'Splash', cursive;
+            text-align: center;
         }
         h2 {
             font-family: 'Racing', cursive;
+            text-align: right;
         }
     </style>
 </head>
