--- a/source/n10.html
+++ b/source/n10.html
@@ -12,12 +12,12 @@
     <h1>Efaad</h1>
     <h2>re1</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam consectetur consequuntur architecto eum obcaecati dignissimos quia amet soluta voluptate, quam veniam consequatur sed commodi illum voluptatibus. Qui natus itaque facilis.</p>
-    <h2>re1</h2>
+    <h2 class="basic">re1</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam consectetur consequuntur architecto eum obcaecati dignissimos quia amet soluta voluptate, quam veniam consequatur sed commodi illum voluptatibus. Qui natus itaque facilis.</p>
     <h1>Faaaad</h1>
-    <h2>re1</h2>
+    <h2 class="medium">re1</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam consectetur consequuntur architecto eum obcaecati dignissimos quia amet soluta voluptate, quam veniam consequatur sed commodi illum voluptatibus. Qui natus itaque facilis.</p>
-    <h2>re2</h2>
+    <h2 class="basic medium">re2</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam consectetur consequuntur architecto eum obcaecati dignissimos quia amet soluta voluptate, quam veniam consequatur sed commodi illum voluptatibus. Qui natus itaque facilis.</p>
 </body>
 </html>
