--- a/source/n11.html
+++ b/source/n11.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>n11</title>
     <style>
+        /*
+        # id
+        . class
+        : pseudo-class
+        :: pseudo-elements
+        > children
+        */
+        body {
+            font-family: sans-serif;
+        }
         div {
             display: inline-block;
             background-color: aqua;
@@ -19,16 +29,39 @@
         div:hover { /*mouse*/
             background-color: blue;
         }
-        div > p { /*only targets the paragraph in a div(we can specify wich using a class or id)*/
+        /* div#d1 > p { /*only targets the paragraph in a div(we can specify wich using a class or id)
             display: none;
-        }
+        } */
         div#d1 > span {
             display: none;
         }
+        /*Pseudo-classes*/
         div#d1:hover > span{ 
             display: block;
             background-color: black;
             color: aliceblue;
+        }
+        a {
+            color: rgb(144, 218, 32);
+            text-decoration: none;
+        }
+        a:visited {
+            color: green;
+            text-decoration: dotted;
+        }
+        a:hover {
+            color: greenyellow;
+            text-decoration: underline;
+        }
+        a:active {
+            color: blue;
+        }
+        /*Pseudo-Elements*/
+        .special::before {
+            content: '_';
+        }
+        .special::after {
+            content: '[link]';
         }
     </style>
 </head>
@@ -38,5 +71,11 @@
     </div>
     <div id="d2">2</div>
     <div id="d3">3</div>
+    <br>
+    <ul>
+        <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+        <li><a href="https://www.github.com/" target="_blank" class="special">Github</a></li>
+        <li><a href="https://www.youtube.com/" target="_blank" class="special">Youtube</a></li>
+    </ul>
 </body>
 </html>
