Group tags in n13

--- a/source/n13.html
+++ b/source/n13.html
@@ -8,13 +8,23 @@
 </head>
 <body>
     <header>
-
+        <nav>  <!--this types of divs are used in a semantic way for better understanding of their purpose and you can put any of this types one inside the other and vice-versa-->
+            <a href="e">e</a>
+            <a href="e">e</a>
+            <a href="e">e</a>
+            <a href="e">e</a>
+        </nav>
     </header>
     <main>
-
+        <article>
+            <section>
+                <h1>Group tags</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste temporibus natus veniam necessitatibus expedita dicta quod asperiores fugit architecto deserunt, vitae eum doloremque voluptates adipisci veritatis quasi sapiente repellat provident!</p>
+            </section>
+        </article>
     </main>
     <footer>
-        
+        <p>Ending</p>
     </footer>
 </body>
 </html>
