Adding css to n13

--- a/source/n13.html
+++ b/source/n13.html
@@ -5,6 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>n13</title>
+    <style>
+        body {
+            background-color: dimgrey;
+        }
+        nav {
+            background-color: bisque;
+            box-shadow: inset 0px 0px 9px 4px rgba(0, 0, 0, 0.79);
+            padding: 3px;
+        }
+        nav > a {
+            margin-right: 10px;
+        }
+        nav > a:hover {
+            background-color: gray;
+            margin-right: 10px;
+            
+        }
+        main {
+            background-color: aquamarine;
+        }
+        main > article {
+            background-color: cadetblue;
+        }
+        section {
+            font-family: sans-serif;
+            background-color: aqua;
+            box-shadow: 3px 3px 3px black;
+        }
+        h1 {
+            margin: 0px;
+        }
+        p {
+            margin: 0px;
+        }
+    </style>
 </head>
 <body>
     <header>
