Adding borders to n13

--- a/source/n13.html
+++ b/source/n13.html
@@ -32,12 +32,21 @@
             font-family: sans-serif;
             background-color: aqua;
             box-shadow: 3px 3px 3px black;
+            border-radius: 20px 0px;
+
         }
-        h1 {
+        section > h1 {
+            padding-left: 10px;
             margin: 0px;
         }
         p {
             margin: 0px;
+        }
+        div#ball {
+            background-color: white;
+            border-radius: 50%;
+            height: 200px;
+            width: 200px;
         }
     </style>
 </head>
@@ -61,5 +70,6 @@
     <footer>
         <p>Ending</p>
     </footer>
+    <div id="ball"></div>
 </body>
 </html>
