Adding image borders to n13

--- a/source/n13.html
+++ b/source/n13.html
@@ -42,6 +42,13 @@
         p {
             margin: 0px;
         }
+        footer {
+            background-color: white;
+            border: 20px solid black;
+            border-image-source: url('images/border_white_black.png'); /*The image needs to be changed so that the sides can fited in the border*/
+            border-image-slice: 20;
+            border-image-repeat: repeat;
+        }
         div#ball {
             background-color: white;
             border-radius: 50%;
