Starting c1 (test site)

--- a/source/n13.html
+++ b/source/n13.html
@@ -45,7 +45,7 @@
         footer {
             background-color: white;
             border: 20px solid black;
-            border-image-source: url('images/border_white_black.png'); /*The image needs to be changed so that the sides can fited in the border*/
+            border-image-source: url('images/border_white_black.png'); /*The image needs to be changed so that the sides can fit in the border*/
             border-image-slice: 20;
             border-image-repeat: repeat;
         }
