Starting a header in c1

--- a/source/c1/c1.html
+++ b/source/c1/c1.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="c1.css">
-    <title>Main</title>
+    <title>Tech</title>
 </head>
 <body>
     <header>
-
+        <h1>Curiosidades de Tecnologia</h1>
+        <h2>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</h2>
+        <section>
+            <div id="home">
+                Home
+            </div>
+            <div>
+                Notícias
+            </div>
+            <div>
+                Curiosidades
+            </div>
+            <div id="fc">
+                Fale Conosco 
+            </div>
+        </section>
     </header>
     <footer>
         
