Starting to edit the footer

--- a/source/c1/c1.html
+++ b/source/c1/c1.html
@@ -27,8 +27,14 @@
             </div>
         </section>
     </header>
+    <main>
+
+    </main>
     <footer>
-        
+        <div id="content">
+            <p>Content by Curso em Vídeo</p>
+            <p>Made by Sermio21</p>
+        </div>
     </footer>
 </body>
 </html>
