--- a/source/c1/c1.html
+++ b/source/c1/c1.html
@@ -31,6 +31,10 @@
 
     </main>
     <footer>
+        <div id="social">
+            <img class="logo" src="images/github-white.png" alt="Github Logo">
+            <img class="logo" src="images/facebook-white.png" alt="Facebook Logo">
+        </div>
         <div id="content">
             <p>Content by Curso em Vídeo</p>
             <p>Made by Sermio21</p>
