Adding Twitter image

--- a/source/c1/c1.html
+++ b/source/c1/c1.html
@@ -28,12 +28,15 @@
         </section>
     </header>
     <main>
+        <div>
 
+        </div>
     </main>
     <footer>
         <div id="social">
             <img class="logo" src="images/github-white.png" alt="Github Logo">
             <img class="logo" src="images/facebook-white.png" alt="Facebook Logo">
+            <img class="logo" src="images/twitter-white.png" alt="Twitter Logo">
         </div>
         <div id="content">
             <p>Content by Curso em Vídeo</p>
