Adding links to the icons in the footer

--- a/source/c1/c1.html
+++ b/source/c1/c1.html
@@ -34,9 +34,10 @@
     </main>
     <footer>
         <div id="social">
-            <img class="logo" src="images/github-white.png" alt="Github Logo">
-            <img class="logo" src="images/facebook-white.png" alt="Facebook Logo">
-            <img class="logo" src="images/twitter-white.png" alt="Twitter Logo">
+            
+            <a href="https://github.com/Sergio-Sousa-Sermio21" target="_blank" rel="external"><img class="logo" src="images/github-white.png" alt="Github Logo"></a>
+            <a href="https://www.facebook.com/sergio.sousa.9235199/" target="_blank" rel="external"><img class="logo" src="images/facebook-white.png" alt="Facebook Logo"></a>
+            <a href="https://twitter.com/sermio21" target="_blank" rel="external"><img class="logo" src="images/twitter-white.png" alt="Twitter Logo"></a>
         </div>
         <div id="content">
             <p>Content by Curso em Vídeo</p>
