--- a/source/c1/c1.html
+++ b/source/c1/c1.html
@@ -28,9 +28,21 @@
         </section>
     </header>
     <main>
-        <div>
-
-        </div>
+        <article>
+            <section>
+                <h3 id="first">História do Mascote do Android</h3>
+                <p>Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
+            </section>
+            <section>
+                <h3>A primeira versão</h3>
+                <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
+            </section>
+        </article>
+        <picture>
+            <source media="(max-width: 920px)" srcset="images/dan-droids-pq.png" type="image/png">
+            <img src="images/dan-droids.png" alt="Dandroids">
+        </picture>
+        <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
     </main>
     <footer>
         <div id="social">
