Adding a link to 'Curso em video' on footer div

--- a/source/c1/c1.html
+++ b/source/c1/c1.html
@@ -57,9 +57,7 @@
                     <img src="images/bugdroid.png" alt="Bugdroid">
                 </picture>
                 <p>A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
-                
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
- 
                 <aside>
                     <h3>Quer aprender mais?</h3>
                     <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
@@ -84,7 +82,6 @@
                         Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
                     </p>
                 </aside>
-
                 <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
             </section>
         </article>
@@ -97,7 +94,9 @@
             <a href="https://twitter.com/sermio21" target="_blank" rel="external"><img class="logo" src="images/twitter-white.png" alt="Twitter Logo"></a>
         </div>
         <div id="content">
-            <p>Content by Curso em Vídeo</p>
+            <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank" rel="external">
+                <p>Content by Curso em Vídeo</p>
+            </a>
             <p>Made by Sermio21</p>
         </div>
     </footer>
