--- a/source/c1/c1.html
+++ b/source/c1/c1.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Curiosidades de Tecnologia</h1>
         <h2>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</h2>
-        <section>
+        <section class="header">
             <div id="home">
                 Home
             </div>
@@ -54,10 +54,12 @@
                 </picture>
                 <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.</p>
                 <picture>
-                    <img src="images/bugdroid.png" alt="Bugdroid">
+                    <img id="holdhand" src="images/bugdroid.png" alt="Bugdroid">
                 </picture>
                 <p>A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
                 <aside>
                     <h3>Quer aprender mais?</h3>
                     <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
