--- a/source/n14.html
+++ b/source/n14.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Background</title>
+    <style>
+        div {
+            display: inline-block;
+            margin: 0px;
+            border: 5px solid black;
+            border-radius: 10px;
+            width: 300px;
+            height: 300px;
+        }
+        div#q1 {
+            background-image: url('images/n14_images/pattern001.png');
+        }
+        div#q2 {
+            background-image: url('images/n14_images/pattern002.png');
+        }
+        div#q3 {
+            background-image: url('images/n14_images/pattern003.png');
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="q1">
+
+    </div>
+    <div id="q2">
+
+    </div>
+    <div id="q3">
+
+    </div>
 </body>
 </html>
