--- a/source/n14.html
+++ b/source/n14.html
@@ -16,12 +16,15 @@
         }
         div#q1 {
             background-image: url('images/n14_images/pattern001.png');
+            background-repeat: repeat-y;
         }
         div#q2 {
             background-image: url('images/n14_images/pattern002.png');
+            background-repeat: repeat-x;
         }
         div#q3 {
             background-image: url('images/n14_images/pattern003.png');
+            background-repeat: round;
         }
     </style>
 </head>
