Background-size and position

--- a/source/n14.html
+++ b/source/n14.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Background</title>
     <style>
+        body {
+            background-image: url('images/n14_images/wallpaper005.jpg');
+            background-size: 1900px;
+            background-position: top center;
+        }
         div {
             display: inline-block;
             margin: 0px;
@@ -13,6 +18,7 @@
             border-radius: 10px;
             width: 300px;
             height: 300px;
+            background-color: white;
         }
         div#q1 {
             background-image: url('images/n14_images/pattern001.png');
@@ -26,17 +32,32 @@
             background-image: url('images/n14_images/pattern003.png');
             background-repeat: round;
         }
+        div#q4 {
+            background-image: url('images/n14_images/wallpaper003.jpg');
+            background-position: top left;
+        }
+        div#q5 {
+            background-image: url('images/n14_images/wallpaper003.jpg');
+            background-position: center;
+        }
+        div#q6 {
+            background-image: url('images/n14_images/wallpaper003.jpg');
+            background-position: bottom right;
+        }
     </style>
 </head>
 <body>
     <div id="q1">
-
     </div>
     <div id="q2">
-
     </div>
     <div id="q3">
-
+    </div><br>
+    <div id="q4">
+    </div>
+    <div id="q5">
+    </div>
+    <div id="q6">
     </div>
 </body>
 </html>
