Adding the html footer in c2

--- a/source/c2/c2.html
+++ b/source/c2/c2.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="c2.css">
 </head>
 <body>
     <header>
@@ -89,7 +90,15 @@
         </section>
     </main>
     <footer>
-
+        <div id="social">
+            
+            <a href="https://github.com/Sergio-Sousa-Sermio21" target="_blank" rel="external"><img class="logo" src="images/github-white.png" alt="Github Logo"></a>
+            <a href="https://www.facebook.com/sergio.sousa.9235199/" target="_blank" rel="external"><img class="logo" src="images/facebook-white.png" alt="Facebook Logo"></a>
+            <a href="https://twitter.com/sermio21" target="_blank" rel="external"><img class="logo" src="images/twitter-white.png" alt="Twitter Logo"></a>
+        </div>
+        <div>
+            <p>Site created by <a href="https://github.com/Sergio-Sousa-Sermio21" target="_blank">Sermio21</a> for <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">Curso em Video</a></p>
+        </div>
     </footer>
 </body>
 </html>
