--- a/source/c2/c2.html
+++ b/source/c2/c2.html
@@ -9,83 +9,83 @@
 </head>
 <body>
     <header>
-        Cordel Moderno
-                Por Milton Duarte
-                [SITE: https://www.recantodasletras.com.br/poesias/3186743]
+        <h1><strong>Cordel Moderno</strong></h1>
+                <h2><strong>Por Milton Duarte</strong></h2>
+                <p>[SITE: https://www.recantodasletras.com.br/poesias/3186743]</p>
     </header>
 
     <main>
         <section>
             <pre>
-                Estou ficando cansado
-                Da tal tecnologia
-                Só se fala por e-mail
-                Mensagem curta e fria
-                Twitter e Facebook
-                Antes que eu caduque
-                Vou dizer tudo em poesia.
+        Estou ficando cansado
+        Da tal tecnologia
+        Só se fala por e-mail
+        Mensagem curta e fria
+        Twitter e Facebook
+        Antes que eu caduque
+        Vou dizer tudo em poesia.
             </pre>
         </section>
 
         <section>
             <pre>
-                Não é mais como era antes
-                É tudo abreviado
-                "Você" só tem duas letras
-                O "O" e o "E" foi riscado
-                Para declarar o amor
-                Basta botar uma flor
-                E um coração desenhado.
+        Não é mais como era antes
+        É tudo abreviado
+        "Você" só tem duas letras
+        O "O" e o "E" foi riscado
+        Para declarar o amor
+        Basta botar uma flor
+        E um coração desenhado.
             </pre>
         </section>
 
         <section>
             <pre>
-                Arroba agora não pesa
-                É parte de um endereço
-                Ponto final nem se usa
-                Ou vai até no começo
-                Agora é .com
-                Se o saite é muito bom
-                Ele vale um alto preço.
-                Pra piorar a liguagem
-                O emoticom é um risco
-                Tem símbolo para tudo
-                Ponto e vírgula e um asterisco
-                Um beijo significa
-                Pra entender como fica
-                Decifre esse rabisco.
+        Arroba agora não pesa
+        É parte de um endereço
+        Ponto final nem se usa
+        Ou vai até no começo
+        Agora é .com
+        Se o saite é muito bom
+        Ele vale um alto preço.
+        Pra piorar a liguagem
+        O emoticom é um risco
+        Tem símbolo para tudo
+        Ponto e vírgula e um asterisco
+        Um beijo significa
+        Pra entender como fica
+        Decifre esse rabisco.
             </pre>
         </section>
 
         <section>
             <pre>
-                Tenho saudade das cartas
-                Escritas com a própria mão
-                Mandava no mês de Junho
-                Só chegava no Verão
-                Mas matava a saudade
-                Era texto de verdade
-                Nas linhas do coração.
+        Tenho saudade das cartas
+        Escritas com a própria mão
+        Mandava no mês de Junho
+        Só chegava no Verão
+        Mas matava a saudade
+        Era texto de verdade
+        Nas linhas do coração.
             </pre>
         </section>
 
         <section>
             <pre>
-                Agora, escrevo e envio
-                Chegando na mesma hora
-                Mas quando vou prosear
-                A pessoa foi embora
-                Abriu outro aplicativo
-                O mundo ficou cativo
-                Da tecnologia do agora.
-                Felizmente, pra orar
-                Não precisa de internet
-                Deus escuta todo mundo
-                Se quiser, faça esse teste
-                Dois pontos são dois joelhos
-                Seus lábios são aparelhos
-                Deixe que Deus interprete.
+        Agora, escrevo e envio
+        Chegando na mesma hora
+        Mas quando vou prosear
+        A pessoa foi embora
+        Abriu outro aplicativo
+        O mundo ficou cativo
+        Da tecnologia do agora.
+        Felizmente, pra orar
+        Não precisa de internet
+        Deus escuta todo mundo
+        Se quiser, faça esse teste
+        Dois pontos são dois joelhos
+        Seus lábios são aparelhos
+        Deixe que Deus interprete.
             </pre>
         </section>
     </main>
@@ -96,7 +96,7 @@
             <a href="https://www.facebook.com/sergio.sousa.9235199/" target="_blank" rel="external"><img class="logo" src="images/facebook-white.png" alt="Facebook Logo"></a>
             <a href="https://twitter.com/sermio21" target="_blank" rel="external"><img class="logo" src="images/twitter-white.png" alt="Twitter Logo"></a>
         </div>
-        <div>
+        <div id="site">
             <p>Site created by <a href="https://github.com/Sergio-Sousa-Sermio21" target="_blank">Sermio21</a> for <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">Curso em Video</a></p>
         </div>
     </footer>
