Adding fonts to c2 and link to author's name

--- a/source/c2/c2.html
+++ b/source/c2/c2.html
@@ -10,8 +10,7 @@
 <body>
     <header>
         <h1><strong>Cordel Moderno</strong></h1>
-                <h2><strong>Por Milton Duarte</strong></h2>
-                <p>[SITE: https://www.recantodasletras.com.br/poesias/3186743]</p>
+                <h2>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></h2>
     </header>
 
     <main>
