--- a/source/c2/c2.html
+++ b/source/c2/c2.html
@@ -14,7 +14,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="normal">
             <pre>
         Estou ficando cansado
         Da tal tecnologia
@@ -26,7 +26,7 @@
             </pre>
         </section>
 
-        <section>
+        <section class="image">
             <pre>
         Não é mais como era antes
         É tudo abreviado
@@ -38,7 +38,7 @@
             </pre>
         </section>
 
-        <section>
+        <section class="normal">
             <pre>
         Arroba agora não pesa
         É parte de um endereço
@@ -57,7 +57,7 @@
             </pre>
         </section>
 
-        <section>
+        <section class="image">
             <pre>
         Tenho saudade das cartas
         Escritas com a própria mão
@@ -69,7 +69,7 @@
             </pre>
         </section>
 
-        <section>
+        <section class="normal">
             <pre>
         Agora, escrevo e envio
         Chegando na mesma hora
