Added the images

--- a/source/c2/c2.html
+++ b/source/c2/c2.html
@@ -26,7 +26,7 @@
             </pre>
         </section>
 
-        <section class="image">
+        <section class="image" id="img1">
             <pre>
         Não é mais como era antes
         É tudo abreviado
@@ -57,7 +57,7 @@
             </pre>
         </section>
 
-        <section class="image">
+        <section class="image" id="img2">
             <pre>
         Tenho saudade das cartas
         Escritas com a própria mão
