--- a/source/n16.html
+++ b/source/n16.html
@@ -13,17 +13,31 @@
         table#one {
             width: 400px;
             border-collapse: collapse;
+            margin-left: 10px;
         }
         table#two {
             border-collapse: collapse;
+            margin-left: 10px;
+        }
+        caption{
+            margin-top: 10px;
+            padding-bottom: 10px;
+            font-size: 35px;
+            font-weight: bold;
+            background-color: bisque;
         }
         thead > tr{
             padding: 2px;
             text-align: center;
+            background-color: rgb(8, 8, 8);
+            color: white;
+        }
+        tbody#sep > tr:nth-child(2n){ /*will change (in this case) every 2 elements*/
+
             background-color: gainsboro;
         }
         th{
-            border: 1px solid black;
+            border: 1px solid rgb(97, 97, 97);
         }
         tr#first {
             margin-left: 400px;
@@ -35,8 +49,8 @@
     </style>
 </head>
 <body>
-    <h1>Tables</h1>
     <table id="one">
+        <caption>Tables</caption>
         <tr id="first">
             <td></td>
             <td>A</td>
@@ -66,19 +80,39 @@
     <table id="two">
         <thead>
             <tr>
-                <th>Number</th>
-                <th>Letter</th>
+                <th scope="col">Number</th> <!--scope indicates the contents of a column or a row-->
+                <th scope="col">Letter</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="sep">
             <tr>
                 <td>1</td>
                 <td>A</td>
             </tr>
+            <tr>
+                <td>2</td>
+                <td>B</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>C</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>D</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>E</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>F</td>
+            </tr>
         </tbody>
         <tfoot>
             <tr>
-                <th>Total</th>
+                <th scope="row">Total</th>
                 <td>26</td>
             </tr>
         </tfoot>
