Fixed table head

--- a/source/n16.html
+++ b/source/n16.html
@@ -10,6 +10,9 @@
             font-family: Arial, Helvetica, sans-serif;
             margin: 0px;
         }
+        table {
+            position: relative;
+        }
         table#one {
             width: 400px;
             border-collapse: collapse;
@@ -18,6 +21,9 @@
         table#two {
             border-collapse: collapse;
             margin-left: 10px;
+        }
+        tr {
+            height: 100px;
         }
         caption{
             margin-top: 10px;
@@ -32,6 +38,12 @@
             background-color: rgb(8, 8, 8);
             color: white;
         }
+        thead > tr > th{
+            background-color: rgb(8, 8, 8);
+            position: sticky;
+            top: -2px;
+            border: 1px solid rgb(97, 97, 97);
+        }
         tbody#sep > tr:nth-child(2n){ /*will change (in this case) every 2 elements*/
 
             background-color: gainsboro;
@@ -43,7 +55,7 @@
             margin-left: 400px;
         }
         td {
-            border: 1px solid black;
+            border: 1px solid rgb(97, 97, 97);
             text-align: center;
         }
     </style>
@@ -108,6 +120,82 @@
             <tr>
                 <td>6</td>
                 <td>F</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>G</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>H</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>I</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>J</td>
+            </tr>
+            <tr>
+                <td>11</td>
+                <td>K</td>
+            </tr>
+            <tr>
+                <td>12</td>
+                <td>L</td>
+            </tr>
+            <tr>
+                <td>13</td>
+                <td>M</td>
+            </tr>
+            <tr>
+                <td>14</td>
+                <td>N</td>
+            </tr>
+            <tr>
+                <td>15</td>
+                <td>P</td>
+            </tr>
+            <tr>
+                <td>16</td>
+                <td>O</td>
+            </tr>
+            <tr>
+                <td>17</td>
+                <td>S</td>
+            </tr>
+            <tr>
+                <td>18</td>
+                <td>R</td>
+            </tr>
+            <tr>
+                <td>19</td>
+                <td>T</td>
+            </tr>
+            <tr>
+                <td>20</td>
+                <td>U</td>
+            </tr>
+            <tr>
+                <td>21</td>
+                <td>V</td>
+            </tr>
+            <tr>
+                <td>22</td>
+                <td>W</td>
+            </tr>
+            <tr>
+                <td>23</td>
+                <td>X</td>
+            </tr>
+            <tr>
+                <td>24</td>
+                <td>Y</td>
+            </tr>
+            <tr>
+                <td>25</td>
+                <td>Z</td>
             </tr>
         </tbody>
         <tfoot>
