--- a/source/n16.html
+++ b/source/n16.html
@@ -12,13 +12,8 @@
         }
         table {
             position: relative;
-        }
-        table#one {
             width: 400px;
-            border-collapse: collapse;
-            margin-left: 10px;
-        }
-        table#two {
+            margin-top: 10px;
             border-collapse: collapse;
             margin-left: 10px;
         }
@@ -61,7 +56,7 @@
     </style>
 </head>
 <body>
-    <table id="one">
+    <table>
         <caption>Tables</caption>
         <tr id="first">
             <td></td>
@@ -89,7 +84,7 @@
         </tr>
     </table>
     <h1>Big Tables</h1>
-    <table id="two">
+    <table>
         <thead>
             <tr>
                 <th scope="col">Number</th> <!--scope indicates the contents of a column or a row-->
@@ -204,6 +199,23 @@
                 <td>26</td>
             </tr>
         </tfoot>
+    </table>
+    <h1>Colspan and Rowspan</h1>
+    <table id="three">
+        <tr>
+            <td>A</td>
+            <td colspan="2">B</td>
+            <td rowspan="3">G</td>
+        </tr>
+        <tr>
+            <td rowspan="2">C</td>
+            <td>D</td>
+            <td>E</td>
+        </tr>
+        <tr>
+            <td>H</td>
+            <td>F</td>
+        </tr>
     </table>
 </body>
 </html>
