Another table with scopes

--- a/source/n16.html
+++ b/source/n16.html
@@ -217,5 +217,53 @@
             <td>F</td>
         </tr>
     </table>
+    <h1>Filmes</h1>
+    <table>
+        <thead>
+            <td>Grupo</td>
+            <td>Nomes</td>
+            <td colspan="3" scope="colgroup">Filmes</td>
+        </thead>
+        <tbody>
+            <tr>
+                <td rowspan="3" scope="rowgroup">Mulheres</td>
+                <td>Ana Maria Santos</td>
+                <td>Alien</td>
+                <td>Rambo</td>
+                <td>Vingadores</td>
+            </tr>
+            <tr>
+                <td>Beatriz Souza</td>
+                <td>Hulk</td>
+                <td>Inception</td>
+                <td>Batman</td>
+            </tr>
+            <tr>
+                <td>Cláudia Melo</td>
+                <td>Oblivion</td>
+                <td>Matrix</td>
+                <td>Big Hero</td>
+            </tr>
+            <tr>
+                <td rowspan="3" scope="rowgroup">Homens</td>
+                <td>Bruno Mendonça</td>
+                <td>Intocáveis</td>
+                <td>Amnésia</td>
+                <td>Gladiator</td>
+            </tr>
+            <tr>
+                <td>Daniel Lourenço</td>
+                <td>Wall-E</td>
+                <td>Oldboy</td>
+                <td>Dangal</td>
+            </tr>
+            <tr>
+                <td>Fabiano Mota</td>
+                <td>Star Wars 5</td>
+                <td>Taxi Drive</td>
+                <td>Toy Story</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
